syntax = "proto3";

package agent;

option go_package = "idra/internal/agent/pb";

import "google/protobuf/empty.proto";

// TaskRequest is sent by the orchestrator to an agent.
message TaskRequest {
  string task_id  = 1;
  string skill    = 2;
  string input    = 3;
  map<string, string> metadata = 4;
}

// TaskEvent is streamed back from the agent during execution.
message TaskEvent {
  string task_id  = 1;
  string type     = 2; // "progress", "result", "error"
  string payload  = 3;
}

// HealthResponse is returned by the agent health check.
message HealthResponse {
  string status     = 1;
  string agent_name = 2;
}

// AgentService is implemented by every Idra agent, regardless of language.
service AgentService {
  // Execute runs a task and streams events back.
  rpc Execute(TaskRequest) returns (stream TaskEvent);

  // Health returns the agent's liveness status.
  rpc Health(google.protobuf.Empty) returns (HealthResponse);
}
